--- a/warungsmoke/public/css/app.css
+++ b/warungsmoke/public/css/app.css
@@ -19,6 +19,11 @@
   --tw-content: '';
 }
 
+.gradient {
+  background-image: linear-gradient(red, rgb(231, 161, 31));
+}
+
+.bg-pink-900 { background-color: #702459; }
 /*
 1. Use a consistent sensible line-height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
